--- a/cm/cm-ui/assets.qrc
+++ b/cm/cm-ui/assets.qrc
@@ -2,5 +2,6 @@
 <qresource prefix="/assets">
 	<file alias = "Style.qml">assets/Style.qml</file>
 	<file alias = "qmldir">assets/qmldir</file>
+        <file alias = "fontawesome.ttf">assets/fontawesome-webfont.ttf</file>
     </qresource>
 </RCC>
