--- a/cm/cm-ui/components.qrc
+++ b/cm/cm-ui/components.qrc
@@ -2,6 +2,8 @@
     <qresource prefix="/components">
         <file alias="qmldir">components/qmldir</file>
         <file alias="NavigationButton.qml">components/NavigationButton.qml</file>
-		<file alias="NavigationBar.qml">components/NavigationBar.qml</file>
-    </qresource>
+        <file alias="NavigationBar.qml">components/NavigationBar.qml</file>
+		<file alias="CommandBar.qml">components/CommandBar.qml</file>
+		<file alias="CommandButton.qml">components/CommandButton.qml</file>
+		</qresource>
 </RCC>
